--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "emailjs": "^4.0.3",
-    "next": "13.5.6",
+    "next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
